[gd_scene load_steps=2 format=3 uid="uid://7rh03lgdfidy"]

[ext_resource type="Script" uid="uid://i1dalgeg56mo" path="res://Objects/UpgradeCard/UpgradeCard.gd" id="1_6j4or"]

[node name="UpgradeCard" type="Control"]
layout_mode = 3
anchor_right = 0.188
anchor_bottom = 0.415
offset_right = 0.359985
offset_bottom = 0.199982
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6j4or")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "奖励"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeContent" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "升级效果升级效果升级效果"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Record" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "升级记录"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Select" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "选择"

[connection signal="pressed" from="VBoxContainer/Select" to="." method="_on_select_pressed"]
